<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/listingFragment">

    <fragment
        android:id="@+id/listingFragment"
        android:name="com.codecool.lolapp.fragments.ListingFragment"
        android:label="@string/listing_title"
        tools:layout="@layout/fragment_listing" >
        <action
            android:id="@+id/action_listingFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_listingFragment_to_favouritesFragment"
            app:destination="@id/favouritesFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.codecool.lolapp.fragments.DetailsFragment"
        android:label="@string/details_title"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_detailsFragment_to_loreFragment"
            app:destination="@id/loreFragment" />
        <argument
            android:name="characterId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/loreFragment"
        android:name="com.codecool.lolapp.fragments.LoreFragment"
        android:label="@string/lore_title"
        tools:layout="@layout/fragment_lore" />
    <fragment
        android:id="@+id/favouritesFragment"
        android:name="com.codecool.lolapp.fragments.FavouritesFragment"
        android:label="fragment_favourites"
        tools:layout="@layout/fragment_favourites" />
</navigation>