<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoreFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/lore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lore_lore"
                android:layout_marginTop="@dimen/margin"
                style="@style/Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lore_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                style="@style/TextDetails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lore" />

            <TextView
                android:id="@+id/ally_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ally_tips"
                android:layout_marginTop="@dimen/margin"
                style="@style/Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lore_text" />

            <TextView
                android:id="@+id/ally_tips_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                style="@style/TextDetails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ally_tips" />

            <TextView
                android:id="@+id/enemy_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enemy_tips"
                android:layout_marginTop="@dimen/margin"
                style="@style/Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ally_tips_text" />

            <TextView
                android:id="@+id/enemy_tips_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                style="@style/TextDetails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enemy_tips" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>