<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clipToPadding="false"
            android:paddingBottom="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginVertical="@dimen/margin"
                app:cardBackgroundColor="@color/color_transparent"
                app:cardCornerRadius="@dimen/details_card_corner_radius"
                android:paddingTop="@dimen/padding"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:paddingBottom="@dimen/padding_bottom">

                    <ImageView
                        android:id="@+id/details_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_marginTop="@dimen/details_margintop"
                        android:layout_marginLeft="@dimen/details_margintop"
                        android:layout_marginRight="@dimen/details_margintop"
                        android:src="@drawable/character_placeholder"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/details_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Title"
                        android:layout_marginTop="@dimen/details_margintop"
                        android:gravity="center_horizontal"
                        android:text="@string/details_name"
                        app:layout_constraintTop_toBottomOf="@+id/details_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/details_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        style="@style/TextDetails"
                        app:layout_constraintTop_toBottomOf="@id/details_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/details_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Title"
                        android:layout_marginTop="@dimen/margin"
                        android:gravity="center_horizontal"
                        android:text="@string/details_character_title"
                        app:layout_constraintTop_toBottomOf="@id/details_name_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/details_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        style="@style/TextDetails"
                        app:layout_constraintTop_toBottomOf="@id/details_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/details_tags"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Title"
                        android:layout_marginTop="@dimen/margin"
                        android:gravity="center_horizontal"
                        android:text="@string/details_tags"
                        app:layout_constraintTop_toBottomOf="@id/details_title_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/details_tags_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        style="@style/TextDetails"
                        app:layout_constraintTop_toBottomOf="@id/details_tags"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <ImageButton
                        android:id="@+id/favourite_button"
                        android:layout_width="@dimen/favourite_button_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:background="@null"
                        app:layout_constraintTop_toBottomOf="@id/details_tags_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </ScrollView>

        <TextView
            android:id="@+id/list_error"
            android:text="@string/error_message"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/loading_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>